syntax = "proto3";
package window;

message SysInfo {
	string serverVersion = 1;
	uint32 userNum = 2;
	int64 timeStamp = 3;
}

message Page {
	string page = 1;
	Msg msg = 2;
}

message Msg {
	MsgEnum type = 1;
	string text = 2;
}

enum MsgEnum {
	INFO = 0;
	WARN = 1;
	ERROR = 2;
	FATAL = 3;
	TOAST = 4;
}

message Login {
	string phone = 1;
	string password = 2;
	uint32 userNum = 3;
}

message User {
	uint32 num = 1;
	string phone = 2;
	bytes password = 3;
	string name = 4;
	string lastRemote = 5;
	int64 lastLogin = 6;
}

